# jurico-mvp

./: .env  AiAnalysisService.cs  Dockerfile  FileIndexer.cs  Jurico.csproj  JuricoDatabase.cs  JuricoDocument.cs  MainForm.cs  Program.cs  README.md  csv_pipeline.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  schema.sql  script.js  server.js  style.css
app/: main.py  node.js
public/: app.js  index.html  style.ccs
static/: index.html  success.html
